Update workspace API - add ingest key.
